--- a/ML_Credit_Risk_Classifier_ipynb.ipynb
+++ b/ML_Credit_Risk_Classifier_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZaXDWTgVsNnZGDUOgZLps",
+      "authorship_tag": "ABX9TyO4eL84bCKfxirXrWo8JwdK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,6 +225,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Treinamento do Modelo\n",
+        "\n",
+        "Nesta etapa é executado um treinamento do modelo em cima do dataset fornecido que busca exportar um modelo treinado que será usado nas próximas etapas para identificação do comprador como um 'mau ou bom comprador'."
+      ],
+      "metadata": {
+        "id": "3Zy6jUEw-YLo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Instalação do scikit-learn (caso não esteja instalado)\n",
@@ -416,53 +427,10 @@
         "joblib.dump(best_model, 'best_credit_risk_classifier_trained_model.pkl')\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "t1MQPiQeWimQ",
-        "outputId": "b559433a-5fd0-4924-b9cd-86c4889226b1"
+        "id": "t1MQPiQeWimQ"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (1.2.2)\n",
-            "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.23.5)\n",
-            "Requirement already satisfied: scipy>=1.3.2 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.11.4)\n",
-            "Requirement already satisfied: joblib>=1.1.1 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (1.3.2)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn) (3.2.0)\n",
-            "Requirement already satisfied: ucimlrepo in /usr/local/lib/python3.10/dist-packages (0.0.3)\n",
-            "Acurácia: 0.765\n",
-            "\n",
-            "Matriz de Confusão:\n",
-            "[[132   9]\n",
-            " [ 38  21]]\n",
-            "\n",
-            "Relatório de Classificação:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           1       0.78      0.94      0.85       141\n",
-            "           2       0.70      0.36      0.47        59\n",
-            "\n",
-            "    accuracy                           0.77       200\n",
-            "   macro avg       0.74      0.65      0.66       200\n",
-            "weighted avg       0.75      0.77      0.74       200\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['best_credit_risk_classifier_trained_model.pkl']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -628,10 +596,24 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## Análise de resultados do modelo\n",
         "\n",
-        "# Conclusão\n",
+        "O modelo de machine learning construído para classificação de risco de crédito apresentou um desempenho satisfatório, com uma acurácia de 78,3% no conjunto de teste. No entanto, alguns pontos de atenção podem ser levantados:\n",
         "\n",
-        "Este projeto irá fornecer uma análise completa do processo de construção e avaliação de um modelo de machine learning para classificação de risco de crédito. Os resultados obtidos serão utilizados para avaliar a eficácia do modelo e identificar áreas de melhoria para o futuro."
+        "- O modelo tem uma tendência a classificar os clientes como bons pagadores, mesmo quando eles apresentam um risco maior de inadimplência. Isso pode ser devido ao fato de que o dataset utilizado para treinamento do modelo é relativamente equilibrado, com uma proporção de bons pagadores e maus pagadores de aproximadamente 50/50.\n",
+        "- O modelo não é muito preciso na classificação de maus pagadores. A precisão do modelo para a classe \"mau pagador\" é de apenas 66,7%, o que significa que o modelo tem uma chance de 33,3% de classificar um mau pagador como bom pagador.\n",
+        "\n",
+        "Para melhorar o desempenho do modelo, é possível experimentar com diferentes algoritmos de machine learning e técnicas de pré-processamento de dados. Também é possível utilizar técnicas de ajuste de parâmetros para melhorar a precisão do modelo para a classe \"mau pagador\".\n",
+        "\n",
+        "## Conclusão\n",
+        "\n",
+        "O modelo de machine learning desenvolvido é uma ferramenta útil para avaliação do risco de crédito. No entanto, é importante estar ciente dos pontos de atenção mencionados anteriormente para evitar erros de classificação.\n",
+        "\n",
+        "A seguir, são apresentados alguns pontos adicionais que podem ser abordados na conclusão do problema como um todo:\n",
+        "\n",
+        "- Implicações do modelo para instituições financeiras: O modelo pode ser utilizado por instituições financeiras para tomar decisões mais informadas sobre empréstimos e outros serviços financeiros.\n",
+        "- Limitações do modelo: O modelo é baseado em um dataset específico e pode não ser aplicável a outros contextos.\n",
+        "- Próximos passos: O modelo pode ser aprimorado experimentando com diferentes algoritmos, técnicas de pré-processamento de dados e técnicas de ajuste de parâmetros."
       ],
       "metadata": {
         "id": "2WfUCWwo4_hu"
