--- a/ML_Credit_Risk_Classifier_ipynb.ipynb
+++ b/ML_Credit_Risk_Classifier_ipynb.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4eL84bCKfxirXrWo8JwdK",
+      "authorship_tag": "ABX9TyPn0ZUT/bere/3SsX5zG43N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,6 +98,39 @@
         "# variable information\n",
         "print(statlog_german_credit_data.variables)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Tabela de Variáveis\n",
+        "\n",
+        "| Variable Name | Role   | Type        | Demographic                                            | Description                                           | Units | Missing Values |\n",
+        "|---------------|--------|-------------|--------------------------------------------------------|-------------------------------------------------------|-------|----------------|\n",
+        "| Attribute1    | Feature| Categorical | Status of existing checking account                    |                                                       |       | No             |\n",
+        "| Attribute2    | Feature| Integer     | Duration                                               | months                                                |       | No             |\n",
+        "| Attribute3    | Feature| Categorical | Credit history                                         |                                                       |       | No             |\n",
+        "| Attribute4    | Feature| Categorical | Purpose                                                |                                                       |       | No             |\n",
+        "| Attribute5    | Feature| Integer     | Credit amount                                          |                                                       |       | No             |\n",
+        "| Attribute6    | Feature| Categorical | Savings account/bonds                                  |                                                       |       | No             |\n",
+        "| Attribute7    | Feature| Categorical | Present employment since                               |                                                       |       | No             |\n",
+        "| Attribute8    | Feature| Integer     | Installment rate in percentage of disposable income   |                                                       |       | No             |\n",
+        "| Attribute9    | Feature| Categorical | Personal status and sex                                | Marital Status                                        |       | No             |\n",
+        "| Attribute10   | Feature| Categorical | Other debtors / guarantors                             |                                                       |       | No             |\n",
+        "| Attribute11   | Feature| Integer     | Present residence since                                |                                                       |       | No             |\n",
+        "| Attribute12   | Feature| Categorical | Property                                               |                                                       |       | No             |\n",
+        "| Attribute13   | Feature| Integer     | Age                                                    | Age                                                   | years | No             |\n",
+        "| Attribute14   | Feature| Categorical | Other installment plans                                |                                                       |       | No             |\n",
+        "| Attribute15   | Feature| Categorical | Housing                                                | Other                                                 |       | No             |\n",
+        "| Attribute16   | Feature| Integer     | Number of existing credits at this bank                |                                                       |       | No             |\n",
+        "| Attribute17   | Feature| Categorical | Job                                                    | Occupation                                            |       | No             |\n",
+        "| Attribute18   | Feature| Integer     | Number of people being liable to provide maintenance for|                                                     |       | No             |\n",
+        "| Attribute19   | Feature| Binary      | Telephone                                              |                                                       |       | No             |\n",
+        "| Attribute20   | Feature| Binary      | Other foreign worker                                   |                                                       |       | No             |\n",
+        "| class         | Target | Binary      | 1 = Good, 2 = Bad                                      |                                                       |       | No             |"
+      ],
+      "metadata": {
+        "id": "jhFubvsxoKA3"
+      }
     },
     {
       "cell_type": "markdown",
@@ -491,7 +524,7 @@
         "id": "lNIUA8hTZdss",
         "outputId": "6ba11a37-cb38-4845-9fda-46cb49190193"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +614,7 @@
         "id": "nNVylQ4fbYyn",
         "outputId": "ad1eacdd-ba97-420e-81c9-650aa9ce49ad"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
