--- a/ml/ML_Credit_Risk_Classifier_ipynb.ipynb
+++ b/ml/ML_Credit_Risk_Classifier_ipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOLPhGFHtLEV/AAy76m5TIf",
+      "authorship_tag": "ABX9TyOngJi0/I2CRBE22GveloR9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,25 +309,27 @@
         "!pip install ucimlrepo\n",
         "\n",
         "# Importando bibliotecas necessárias\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "from sklearn.compose import ColumnTransformer\n",
-        "\n",
-        "from ucimlrepo import fetch_ucirepo\n",
-        "\n",
-        "# fetch dataset\n",
-        "statlog_german_credit_data = fetch_ucirepo(id=144)\n",
+        "import joblib\n",
         "\n",
         "# Supondo que 'class' seja a coluna-alvo\n",
         "X = statlog_german_credit_data.data.features\n",
         "y = statlog_german_credit_data.data.targets['class']\n",
         "\n",
         "# Identificando colunas categóricas\n",
-        "categorical_cols = [col for col in X.columns if X[col].dtype == 'object']\n",
+        "categorical_cols = [col for col in X.columns]\n",
         "\n",
-        "\n",
+        "# Criando um ColumnTransformer para codificação one-hot\n",
+        "preprocessor = ColumnTransformer(\n",
+        "    transformers=[\n",
+        "        ('cat', OneHotEncoder(handle_unknown='ignore'), categorical_cols)\n",
+        "    ],\n",
+        "    remainder='passthrough'\n",
+        ")\n",
         "\n",
         "# Dividindo os dados em conjuntos de treino e teste\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
@@ -339,11 +341,23 @@
         "# Inicializando o RandomForestClassifier\n",
         "model = RandomForestClassifier(random_state=42)\n",
         "\n",
-        "# Treinando o modelo\n",
-        "model.fit(X_train_preprocessed, y_train)\n",
+        "# Definindo um grid de parâmetros para ajuste de hiperparâmetros\n",
+        "param_grid = {\n",
+        "    'n_estimators': [50, 100, 200],\n",
+        "    'max_depth': [None, 10, 20, 30],\n",
+        "    'min_samples_split': [2, 5, 10],\n",
+        "    'min_samples_leaf': [1, 2, 4]\n",
+        "}\n",
+        "\n",
+        "# Usando GridSearchCV para ajuste de hiperparâmetros\n",
+        "grid_search = GridSearchCV(model, param_grid, cv=5)\n",
+        "grid_search.fit(X_train_preprocessed, y_train)\n",
+        "\n",
+        "# Obtendo o melhor modelo do GridSearchCV\n",
+        "best_model = grid_search.best_estimator_\n",
         "\n",
         "# Realizando previsões no conjunto de teste\n",
-        "y_pred = model.predict(X_test_preprocessed)\n",
+        "y_pred = best_model.predict(X_test_preprocessed)\n",
         "\n",
         "# Avaliando o modelo\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
@@ -355,7 +369,10 @@
         "print(\"\\nMatriz de Confusão:\")\n",
         "print(conf_matrix)\n",
         "print(\"\\nRelatório de Classificação:\")\n",
-        "print(classification_rep)"
+        "print(classification_rep)\n",
+        "\n",
+        "# Export the best model\n",
+        "joblib.dump(best_model, 'best_credit_risk_classifier_trained_model.pkl')"
       ],
       "metadata": {
         "id": "ZyTqLk2XTYJE"
@@ -464,9 +481,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lNIUA8hTZdss",
-        "outputId": "a0d15a83-8c61-4e52-cb43-11c69de1f024"
+        "outputId": "4bbfa7e5-184e-415e-c006-ec5b495e4aad"
       },
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,9 +568,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nNVylQ4fbYyn",
-        "outputId": "8882ee3c-5b31-4ca0-f48f-9052e30c23e9"
+        "outputId": "a36e414f-93ce-4c86-8643-eea2e96785f1"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
